Fix alignment of buttons

--- a/public/css/tree.css
+++ b/public/css/tree.css
@@ -98,7 +98,7 @@ border-color: #dce2e8;
 }
 
 .tree-node-content-scan {
-  padding: 3px;
+  padding: 4px;
   font-weight: bold;
   color: white;
   background: #428bca;
